PRUEBA cambio de localhost

--- a/back/.env
+++ b/back/.env
@@ -14,4 +14,4 @@ WOMPI_SECRET_KEY='test_integrity_yrxAsjSsxDCXWJwxJURuxwxxiAWxZHGU'
 DB_HOST=tu-endpoint-rds.cxh3l8c9xxxx.us-east-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=password
-DB_NAME=ponchoneta_store
+DB_NAME=ponchonetaDB
