PRUEBA cambio de localhost

--- a/back/.env
+++ b/back/.env
@@ -11,7 +11,7 @@ WOMPI_SECRET_KEY='test_integrity_yrxAsjSsxDCXWJwxJURuxwxxiAWxZHGU'
 
 
 
-DB_HOST=tu-endpoint-rds.cxh3l8c9xxxx.us-east-1.rds.amazonaws.com
+DB_HOST=webappdatabase-mysqldatabase-wzebypx66ef1.cqoazlkbaapp.us-east-1.rds.amazonaws.com
 DB_USER=admin
 DB_PASSWORD=password
 DB_NAME=ponchonetaDB
