--- a/cloudformation/app.yml
+++ b/cloudformation/app.yml
@@ -73,19 +73,22 @@ Resources:
             cd /home/ec2-user/app
             sleep 60
             mysql -h ${RDSHost} -u poncho -p${DBPassword} ponchonetaDB < db/ponchonetaDB.sql
-            cat <<EOF > /home/ec2-user/app/back/.env
+
+            mkdir -p /home/ec2-user/app/back
+            cat > /home/ec2-user/app/back/.env <<EOF
             DB_HOST=${RDSHost}
             DB_USER=poncho
             DB_PASSWORD=${DBPassword}
             DB_NAME=ponchonetaDB
             WOMPI_PUBLIC_KEY='pub_test_7OBPgywA4RKSR7r3HiLFdZk6D3iTcV8I'
             WOMPI_PRIVATE_KEY='prv_test_TEzadcH5GpXBbMfyToyus0KyLlHNmdw4'
-            WOMPI_SECRET_KEY='test_integrity_yrxAsjSsxDCXWJwxJURuxwxxiAWxZHGU'
+            WOMPI_SECRET_KEY='test_integrity_yrxAsjSsxDCGk2sfDqL'
             EOF
+            
             cd /home/ec2-user/app/back
             npm install
             nohup node server.js > /home/ec2-user/server.log 2>&1 &
-
+  
 
   ALB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
