--- a/back/.env
+++ b/back/.env
@@ -4,9 +4,9 @@
 #DB_NAME=ponchonetaDB
 #PORT=3000
 
-WOMPI_PUBLIC_KEY='pub_test_7OBPgywA4RKSR7r3HiLFdZk6D3iTcV8I'
-WOMPI_PRIVATE_KEY='prv_test_TEzadcH5GpXBbMfyToyus0KyLlHNmdw4'
-WOMPI_SECRET_KEY='test_integrity_yrxAsjSsxDCXWJwxJURuxwxxiAWxZHGU'
+WOMPI_PUBLIC_KEY=pub_test_7OBPgywA4RKSR7r3HiLFdZk6D3iTcV8I
+WOMPI_PRIVATE_KEY=prv_test_TEzadcH5GpXBbMfyToyus0KyLlHNmdw4
+WOMPI_SECRET_KEY=test_integrity_yrxAsjSsxDCXWJwxJURuxwxxiAWxZHGU
 
 
 
